# uni-final-project

./: .gitignore  HOW_TO_RUN.md  LICENSE  README.md  docker-compose.yml  test_server.sh
java-server/: .gitignore  Dockerfile  JAVA_README.md  pom.xml
java-server/src/main/java/com/city/javaserver/: Coordinate.java  DummyFriend.java  DummyObject.java  JavaServerApplication.java  NumericObject.java  ObjectFormat.java  ObjectType.java  RequestController.java  SendObjectsDTO.java  WebConfig.java
java-server/src/main/resources/: application-docker.properties  application.properties
rust_server/: Cargo.toml  Dockerfile  RUST_README.md
rust_server/src/: lib.rs  main.rs
rust_server/src/structs/: coordinate.rs  dummy_friend.rs  dummy_object.rs  mod.rs  numeric_object.rs  send_objects.rs
rust_server/tests/: health_check.rs
server-benchmark/: SB_README.md  benchmark-dockerized.py  benchmark-localhost.py  requirements.txt
typescript-client/: .dockerignore  Dockerfile  TS_README.md  index.html  node_deserialization_JSON_BSON.js  package-lock.json  package.json  vite.config.ts
typescript-client/apache_config_docker/: ports.conf
typescript-client/apache_config_docker/sites-enabled/: 000-default.conf
typescript-client/apache_config_localhost/: ports.conf
typescript-client/apache_config_localhost/sites-enabled/: 000-default.conf
typescript-client/src/: App.tsx
ui-benchmarking/: .gitignore  UIB_README.md  generate_graphs.py  package-lock.json  package.json  requirements.txt  ui-benchmark-dockerized.js  ui-benchmark-localhost.js
(+1 files in other folders)
