[package]
name = "rust_server"
version = "0.1.0"
authors = ["Adam Kaczmarski"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_server"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
bson = "2.5.0"
reqwest = {version="0.11", features= ["json"]}
#base64 = "0.21.0"
#lazy_static = "1.4.0"
#once_cell = "1.17.1"
serde = {version = "1.0.152",features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["macros", "rt-multi-thread","sync"] }

[dev-dependencies]
reqwest = "0.11"
